--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Virtual World Game</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <h1>Virtual World Game</h1>
-        <script src="game.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Virtual World Game</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h1 id="title">Virtual World Game</h1>
+    <div id="instructions">
+      <h3>Use Numpad to Move:</h3>
+      <pre>
+                ↖ 7   ↑ 8   ↗ 9
+                ← 4   · 5   → 6
+                ↙ 1   ↓ 2   ↘ 3
+            </pre
+      >
+      <p>
+        Press the corresponding Numpad key to move the player in that direction.
+      </p>
+    </div>
+    <div id="controls" style="display: none"></div>
+    <div id="board" style="display: none"></div>
+    <div class="popup" id="organismPopup" style="display: none"></div>
+    <script src="game.js"></script>
+  </body>
 </html>
