--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     <!-- Popup for organism selection -->
     <div class="popup hidden" id="organismPopup"></div>
 
-    <!-- <script type="module" src="startGame.js"></script> -->
+    <script type="module" src="startGame.js"></script>
   </body>
 </html>
